# CarSharingApplication

./: README.md
Carshare/: CMakeLists.txt  Carshare.qmlproject  Carshare.qmlproject.qtds  qmlmodules
Carshare/content/: AddMaintenanceToCar.qml  AddNewCar.qml  CMakeLists.txt  DeleteCar.qml  ModifyCar.qml  Screen01.ui.qml  Screen02.ui.qml  Screen04.ui.qml  Screen05.ui.qml  Screen06.ui.qml  Screen07.ui.qml  ViewBookings.qml  ViewCars.qml  ViewPayments.qml
Carshare/imports/: CMakeLists.txt
Carshare/imports/Carshare/: CMakeLists.txt  qmldir
Carshare/imports/Carshare/designer/: plugin.metainfo
Carshare/src/: import_qml_plugins.h
carsharing_client/Carshare/: AddNewCar.qml  AddReview.qml  Booking.qml  CMakeLists.txt  Login.qml  Main.qml  OwnerCars.qml  Registration.qml  RenterBookings.qml  RenterCars.qml  RenterMoney.qml  ReviewStatistics.qml  car.cpp  car.h  main.cpp  networkaccess.cpp  networkaccess.h  networkcomms.cpp  networkcomms.h
carsharing_server/: pom.xml
carsharing_server/src/main/java/org/example/carsharing_server/: ApplicationController.java  Booking.java  Car.java  CarMaintenance.java  CarsharingServerApplication.java  HibernateUtility.java  Location.java  MoneyService.java  Payment.java  ReviewRating.java  User.java
carsharing_server/src/main/java/org/example/carsharing_server/Booking/: Booking.java  BookingController.java  BookingRepository.java  (+3 more)
carsharing_server/src/main/resources/: application.properties  hibernate.cfg.xml
carsharing_server/src/test/java/org/example/carsharing_server/: CarsharingServerApplicationTests.java
(+47 files in other folders)
